--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,21 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v4
 
+    - name: Set up Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Install Android SDK
+      uses: android-actions/setup-android@v3
+
     - name: Install system dependencies
       run: |
         sudo apt update
         sudo apt install -y \
-          git zip unzip openjdk-17-jdk \
-          python3-pip autoconf libtool pkg-config \
+          git zip unzip python3-pip \
+          autoconf libtool pkg-config \
           zlib1g-dev libncurses5-dev libncursesw5-dev \
           cmake libffi-dev libssl-dev
 
