--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Build Kivy APK
 
 on:
@@ -7,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04   # IMPORTANT: pin Ubuntu version
 
     steps:
     - name: Checkout source
@@ -22,7 +23,16 @@ jobs:
     - name: Install Android SDK
       uses: android-actions/setup-android@v3
 
-    - name: Install system dependencies
+    - name: Accept SDK Licenses
+      run: yes | sdkmanager --licenses
+
+    - name: Install Required SDK Packages
+      run: |
+        sdkmanager "platform-tools"
+        sdkmanager "platforms;android-33"
+        sdkmanager "build-tools;33.0.2"
+
+    - name: Install Linux dependencies
       run: |
         sudo apt update
         sudo apt install -y \
@@ -37,8 +47,7 @@ jobs:
         pip install buildozer cython
 
     - name: Build Debug APK
-      run: |
-        buildozer android debug
+      run: buildozer android debug
 
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4
