--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,35 +8,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04   # IMPORTANT: pin Ubuntu version
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
 
-    - name: Set up Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-
-    - name: Install Android SDK
-      uses: android-actions/setup-android@v3
-
-    - name: Accept SDK Licenses
-      run: yes | sdkmanager --licenses
-
-    - name: Install Required SDK Packages
-      run: |
-        sdkmanager "platform-tools"
-        sdkmanager "platforms;android-33"
-        sdkmanager "build-tools;33.0.2"
-
-    - name: Install Linux dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y \
-          git zip unzip python3-pip \
+          git zip unzip openjdk-17-jdk python3-pip \
           autoconf libtool pkg-config \
           zlib1g-dev libncurses5-dev libncursesw5-dev \
           cmake libffi-dev libssl-dev
@@ -46,8 +28,14 @@ jobs:
         pip install --upgrade pip
         pip install buildozer cython
 
+    - name: Force Accept Android Licenses
+      run: |
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+
     - name: Build Debug APK
-      run: buildozer android debug
+      run: |
+        buildozer android debug --accept-licenses
 
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4
