--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,34 +8,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+
+    container:
+      image: kivy/buildozer:latest
 
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          git zip unzip openjdk-17-jdk python3-pip \
-          autoconf libtool pkg-config \
-          zlib1g-dev libncurses5-dev libncursesw5-dev \
-          cmake libffi-dev libssl-dev
-
-    - name: Install Buildozer
-      run: |
-        pip install --upgrade pip
-        pip install buildozer cython
-
-    - name: Force Accept Android Licenses
-      run: |
-        mkdir -p ~/.android
-        touch ~/.android/repositories.cfg
-
     - name: Build Debug APK
       run: |
-        buildozer android debug --accept-licenses
+        buildozer android debug
 
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4
