--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 
-name: Build Android APK
+name: Build Kivy APK
 
 on:
   push:
@@ -9,10 +9,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     env:
-      BUILDOZER_ALLOW_ROOT: 1
+      BUILDOZER_ALLOW_ROOT: 1  # allow root for Buildozer
 
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: "3.10"  # stable for Buildozer
 
       - name: Install system dependencies
         run: |
@@ -30,19 +30,23 @@ jobs:
             git zip unzip openjdk-17-jdk \
             autoconf libtool pkg-config \
             zlib1g-dev libncurses5-dev \
-            libncursesw5-dev libtinfo5 cmake \
+            libncursesw5-dev cmake \
             libffi-dev libssl-dev
 
-      - name: Install Buildozer
+      - name: Install Buildozer and Cython
         run: |
           python -m pip install --upgrade pip
           pip install buildozer cython
 
       - name: Accept Android SDK licenses
-        run: yes | buildozer android sdk --accept-licenses
+        run: |
+          mkdir -p ~/.android
+          touch ~/.android/repositories.cfg
+          yes | buildozer android sdk --accept-licenses
 
-      - name: Build APK
-        run: buildozer android debug
+      - name: Build Debug APK
+        run: |
+          buildozer android debug
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
