--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      BUILDOZER_ALLOW_ROOT: 1  # allow root for Buildozer
+      BUILDOZER_ALLOW_ROOT: 1
 
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"  # stable for Buildozer
+          python-version: "3.10"
 
       - name: Install system dependencies
         run: |
@@ -37,12 +37,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install buildozer cython
-
-      - name: Accept Android SDK licenses
-        run: |
-          mkdir -p ~/.android
-          touch ~/.android/repositories.cfg
-          yes | buildozer android sdk --accept-licenses
 
       - name: Build Debug APK
         run: |
