--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,20 +5,41 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container:
-      image: kivy/buildozer:latest
+    runs-on: ubuntu-22.04
+
+    env:
+      BUILDOZER_ALLOW_ROOT: 1  # avoids EOFError for root
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Build APK
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            git zip unzip openjdk-17-jdk \
+            autoconf libtool pkg-config \
+            zlib1g-dev libncurses5-dev \
+            libncursesw5-dev cmake \
+            libffi-dev libssl-dev
+
+      - name: Install Buildozer and Cython
+        run: |
+          python -m pip install --upgrade pip
+          pip install buildozer cython
+
+      - name: Build Debug APK
         run: buildozer android debug
-        env:
-          BUILDOZER_ALLOW_ROOT: 1
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
