--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      BUILDOZER_ALLOW_ROOT: 1  # avoids EOFError for root
+      BUILDOZER_ALLOW_ROOT: 1
 
     steps:
       - name: Checkout repository
@@ -33,10 +33,15 @@ jobs:
             libncursesw5-dev cmake \
             libffi-dev libssl-dev
 
-      - name: Install Buildozer and Cython
+      - name: Upgrade pip & install Buildozer
         run: |
           python -m pip install --upgrade pip
-          pip install buildozer cython
+          pip install --upgrade buildozer python-for-android cython
+
+      - name: Clean previous builds
+        run: |
+          rm -rf .buildozer
+          rm -rf bin
 
       - name: Build Debug APK
         run: buildozer android debug
