--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 
+
 name: Android Build
 
 on:
@@ -10,10 +11,19 @@ jobs:
   build:
     runs-on: ubuntu-22.04
 
+    env:
+      BUILDOZER_ALLOW_ROOT: 1
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.9"
+
+      # Cache Buildozer directories to speed up builds
       - name: Cache Buildozer directories
         uses: actions/cache@v4
         with:
@@ -22,14 +32,44 @@ jobs:
             ~/.buildozer
           key: buildozer-${{ hashFiles('buildozer.spec') }}
 
-      - name: Build with Buildozer (Docker)
-        uses: ArtemSBulgakov/buildozer-action@v1
-        with:
-          command: buildozer android debug
-          buildozer_version: stable
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y zip unzip wget openjdk-17-jdk
+          python -m pip install --upgrade pip
+          pip install buildozer==1.5.0 cython python-for-android==2023.9.16
 
-      - name: Upload APK
+      # Pre-download Android NDK 23b to avoid urllib/tempfile crash
+      - name: Pre-download Android NDK 23b
+        run: |
+          mkdir -p $HOME/.buildozer/android/platform
+          cd $HOME/.buildozer/android/platform
+          if [ ! -d "android-ndk-r23b" ]; then
+            wget -q https://dl.google.com/android/repository/android-ndk-r23b-linux.zip
+            unzip -q android-ndk-r23b-linux.zip
+            rm android-ndk-r23b-linux.zip
+          fi
+
+      # Accept SDK licenses and install stable Build-Tools
+      - name: Accept SDK licenses & install SDK packages
+        run: |
+          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+            "platform-tools" "platforms;android-33" "build-tools;36.1.0"
+
+      # Clean previous builds
+      - name: Clean previous builds
+        run: |
+          rm -rf .buildozer
+          rm -rf bin
+
+      # Build APK
+      - name: Build Debug APK
+        run: buildozer android debug
+
+      # Upload artifact
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: apk
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: app-debug-apk
+          path: bin/*.apk
