--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,76 +1,44 @@
-
-name: Android Build
-
+ 
+ 
+name: CI
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-
-    env:
-      BUILDOZER_ALLOW_ROOT: 1
+    runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Set up Python 3.9 (stable for Buildozer)
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.9"
+      # used to cache dependencies with a timeout
+      - name: Get Date
+        id: get-date
+        run: |
+          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+        shell: bash
 
-      # 3️⃣ Cache Buildozer directories for faster builds
-      - name: Cache Buildozer directories
+      - name: Cache Buildozer global directory
         uses: actions/cache@v4
         with:
-          path: |
-            .buildozer
-            ~/.buildozer
-          key: buildozer-${{ hashFiles('buildozer.spec') }}
+          path: .buildozer_global
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
 
-      # 4️⃣ Install system dependencies and Buildozer
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y zip unzip wget openjdk-17-jdk
-          python -m pip install --upgrade pip
-          pip install buildozer==1.5.0 cython python-for-android==2023.9.16
+      - uses: actions/cache@v4
+        with:
+          path: .buildozer
+          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
 
-      # 5️⃣ Pre-download Android NDK 23b to avoid urllib/tempfile crash
-      - name: Pre-download Android NDK 23b
-        run: |
-          mkdir -p $HOME/.buildozer/android/platform
-          cd $HOME/.buildozer/android/platform
-          if [ ! -d "android-ndk-r23b" ]; then
-            wget -q https://dl.google.com/android/repository/android-ndk-r23b-linux.zip
-            unzip -q android-ndk-r23b-linux.zip
-            rm android-ndk-r23b-linux.zip
-          fi
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v4
+        id: buildozer
+        with:
+          command: buildozer android debug
+          buildozer_version: master
 
-      # 6️⃣ Accept licenses & install stable Build-Tools 36.1.0
-      - name: Accept SDK licenses & install build-tools
-        run: |
-          SDK="$HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin"
-          yes | $SDK/sdkmanager --licenses
-          yes | $SDK/sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.1.0"
-
-      # 7️⃣ Clean previous builds
-      - name: Clean previous builds
-        run: |
-          rm -rf .buildozer bin
-
-      # 8️⃣ Build APK
-      - name: Build Debug APK
-        run: buildozer android debug
-
-      # 9️⃣ Upload artifact
-      - name: Upload APK artifact
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
-          path: bin/*.apk
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
