--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,38 +13,26 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y \
-          python3-pip \
-          python3-setuptools \
-          python3-wheel \
-          git \
-          zip \
-          unzip \
-          openjdk-17-jdk \
-          autoconf \
-          libtool \
-          pkg-config \
-          zlib1g-dev \
-          libncurses5-dev \
-          libncursesw5-dev \
-          libtinfo5 \
-          cmake \
-          libffi-dev \
-          libssl-dev
+          git zip unzip openjdk-17-jdk \
+          autoconf libtool pkg-config \
+          zlib1g-dev libncurses5-dev \
+          libncursesw5-dev libtinfo5 \
+          cmake libffi-dev libssl-dev
 
-    - name: Install Buildozer
+    - name: Install Python tools
       run: |
-        pip3 install buildozer
-        pip3 install cython
+        python3 -m pip install --upgrade pip
+        pip3 install buildozer cython
 
-    - name: Accept licenses
-      run: yes | sdkmanager --licenses || true
-
-    - name: Build APK
-      run: buildozer android debug
+    - name: Build with Buildozer
+      run: |
+        buildozer android debug
+      env:
+        ANDROID_HOME: /home/runner/.buildozer/android/platform/android-sdk
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
