--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,15 @@ jobs:
           libncursesw5-dev libtinfo5 \
           cmake libffi-dev libssl-dev
 
-    - name: Install Python tools
+    - name: Install Buildozer
       run: |
         python3 -m pip install --upgrade pip
         pip3 install buildozer cython
 
-    - name: Build with Buildozer
+    - name: Build APK
       run: |
+        buildozer android clean
         buildozer android debug
-      env:
-        ANDROID_HOME: /home/runner/.buildozer/android/platform/android-sdk
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
