--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,24 @@
 
-name: Build APK
+name: Build Kivy APK
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
 
-    steps:
-    - uses: actions/checkout@v4
+    env:
+      HOME: /home/runner
 
-    - name: Install dependencies
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install system dependencies
       run: |
         sudo apt update
         sudo apt install -y \
@@ -23,18 +28,24 @@ jobs:
           libncursesw5-dev libtinfo5 \
           cmake libffi-dev libssl-dev
 
-    - name: Install Buildozer
+    - name: Upgrade pip
       run: |
         python3 -m pip install --upgrade pip
+
+    - name: Install Buildozer
+      run: |
         pip3 install buildozer cython
 
-    - name: Build APK
+    - name: Prepare Buildozer directory
       run: |
-        buildozer android clean
-        buildozer android debug
+        mkdir -p ~/.buildozer
 
-    - name: Upload APK
+    - name: Build APK (verbose)
+      run: |
+        buildozer -v android debug
+
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: apk
+        name: kivy-apk
         path: bin/*.apk
