--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,24 +21,19 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y \
-          git zip unzip openjdk-17-jdk \
-          autoconf libtool pkg-config \
-          zlib1g-dev libncurses5-dev \
-          libncursesw5-dev libtinfo5 \
-          cmake libffi-dev libssl-dev
+        sudo apt install -y git zip unzip openjdk-17-jdk \
+        autoconf libtool pkg-config zlib1g-dev \
+        libncurses5-dev libncursesw5-dev libtinfo5 \
+        cmake libffi-dev libssl-dev
 
     - name: Upgrade pip
-      run: |
-        python3 -m pip install --upgrade pip
+      run: python3 -m pip install --upgrade pip
 
     - name: Install Buildozer
-      run: |
-        pip3 install buildozer cython
+      run: pip3 install buildozer cython
 
     - name: Prepare Buildozer directory
-      run: |
-        mkdir -p ~/.buildozer
+      run: mkdir -p ~/.buildozer
 
     - name: Build APK (verbose)
       run: |
